# swh

./: .gitignore  CNAME  Cargo.toml  Gemfile  LICENSE  Makefile  README.md  _config.yml  index.md
examples/: hosts.kdl
src/: api.rs  cli.rs  core.rs  error.rs  lib.rs  main.rs  util.rs
src/cli/: list.rs  open.rs  serve.rs  show.rs  toggle.rs
src/cmd/: list.rs  mod.rs  toggle.rs
src/core/: config_file.rs  host_entry.rs  host_file.rs  kdl.rs  mod.rs
src/core/kdl/: alias.rs  config.rs  env.rs  host.rs  include.rs
tests/: swh.rs
