[package]
name = "swh"
version = "0.2.0"
edition = "2021"
authors = ["Zhenyuan Lau <zhenyuanlau@outlook.com>"]
license = "MIT"
description = "A CLI for Switch Hosts"
readme = "README.md"
homepage = "https://swh.zhenyuanlau.me"
repository = "https://github.com/zhenyuanlau/swh"
keywords = ["cli", "hosts", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
clap = { version = "4.0.32", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
comfy-table = "6.1.4"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
directories-next = "2.0.0"
sudo = "0.6.0"
thiserror = "1.0"
kdl = "4.6.0"
knuffel = "3.2.0"
miette = { version= "5.8.0", features=["fancy"] }
faccess = "0.2.4"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2"
daemonize = "0.5.0"
regex = "1.8.1"

[dev-dependencies]
assert_cmd = "2.0.7"
mockall = "0.11.3"
